--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-fastapi
-uvicorn
-supabase
-python-dotenv
-httpx 
+fastapi==0.104.1
+uvicorn==0.24.0
+supabase==2.0.2
+python-dotenv==1.0.0
+httpx==0.25.2
+pydantic==2.5.0
+python-multipart==0.0.6 
