--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ supabase==2.0.2
 python-dotenv==1.0.0
 httpx==0.24.1
 pydantic==2.5.0
-python-multipart==0.0.6 
+python-multipart==0.0.6
+pydantic-settings 
