--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,4 @@ python-dotenv==1.0.0
 httpx==0.24.1
 pydantic==2.5.0
 python-multipart==0.0.6
-pydantic-settings==2.2.1
-twilio==8.9.0 
+pydantic-settings 
